# algorytmyewolucyjne

./: PBIL.ipynb  PBIL_satelite.ipynb  PBIL_trash.ipynb  README.md  SimulatedAnnealingQAP.ipynb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
List 1/: PBIL_satelite.ipynb  SimulatedAnnealingQAP.ipynb
List 2/: SGA1.ipynb
List 3/: EM.ipynb  ES.ipynb
List 4/: CGA.py  MIMIC.ipynb  MIMIC.py  PBIL.py  UMDA.py  UMDAvsPBILvsCGA.ipynb  benchmarks.py
List 6/: EG_tutorial.ipynb  Introduction to Portfolio Optimization.ipynb  Introduction to Portfolio Optimization.ipynb.txt  NSGAII.py  WIG20.txt
List 6/2/: 2_helper.py  2_justsum.py  2_satelite.py  2_satelite_v2.py  2_satelite_v3.py  2_satelite_v4.py
List 6/2/satelite_data/: ground_truth.pkl  images.pkl
List 6/mstall/: 01CYBATON.mst  06MAGNA.mst  08OCTAVA.mst  11BIT.mst  1SOLUTION.mst  3RGAMES.mst  4MASS.mst  4MOBILITY.mst  7FIT.mst  7LEVELS.mst  AALLIANCE.mst  ABAK.mst  ABPL.mst  ABSINVEST.mst  ACARTUS.mst  ACAUTOGAZ.mst  ACH0725.mst  ACH0826.mst  ACH1123.mst  ACH1124.mst  ACH1125.mst  ACTION.mst  ADATEX.mst  ADIDAS.mst  ADIUVO.mst  ADVERTIGO.mst  AERFINANC.mst  AFHOL.mst  AGORA.mst  AGROLIGA.mst  AGROMEP.mst  AGROTON.mst  AIGAMES.mst  AILLERON.mst  AIRWAY.mst  AITON.mst  AKCEPTFIN.mst  ALDA.mst  ALIOR.mst  ALLEGRO.mst  (+3095 more)
