[tool.poetry]
name = "algorytmy ewolucyjne"
version = "0.1.0"
description = ""
authors = ["PGrabinski"]

[tool.poetry.dependencies]
python = "3.11.6"
pandas = "^2"
plotly = "^5"
tqdm = "^4.66.1"
jupyter = "^1.0.0"
joblib = "^1.3.2"
matplotlib = "^3.8.0"
wandb = "^0.15.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.5"]
build-backend = "poetry.masonry.api"
